CLS support (again)

--- a/GameData/ROCapsules/PartConfigs/APAS/APAS_Active.cfg
+++ b/GameData/ROCapsules/PartConfigs/APAS/APAS_Active.cfg
@@ -73,4 +73,10 @@ PART
 		endEventGUIName = Retract Docking Ring
 		actionGUIName = Toggle Docking Ring
 	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
 }
