--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule2.cfg
@@ -112,4 +112,12 @@ PART
 			maxAmount = 15000
 		}
 	}
+	
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+		passable = True
+	}
 }
