--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
@@ -148,6 +148,12 @@ PART
 		dragModifier = 4
 	}
 	
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
+	
 	// Heatshield specs handled by RO Heatshield pass
 	RESOURCE
 	{
