--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism(Dprct).cfg
@@ -91,4 +91,10 @@ PART
 		actionGUIName = Toggle Probe
 		allowAnimationWhileShielded = False
 	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
 }
