--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM(Dprct).cfg
@@ -382,7 +382,9 @@ PART
 	{
 		name = ModuleConnectedLivingSpace
 		passable = true
-		impassablenodes = para, para2, bottom
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+		impassablenodes = para, para2
 	}
 	
 	MODULE
