--- a/GameData/ROCapsules/PartConfigs/CST/CSTNDSActive.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNDSActive.cfg
@@ -81,6 +81,12 @@ PART
 		undockEjectionForce = 0.1
 		stagingEnabled = False
 	}
+	
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
 }
 
 @PART[ROC-CSTNDSActive]:AFTER[FerramAerospaceResearch]
