--- a/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
@@ -151,6 +151,12 @@ PART
 		dragCubeName = SEMIDEPLOYED
 		dragModifier = 15
 	}
+	
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
 }
 
 @PART[ROC-CSTParachute]:AFTER[zzzRealismOverhaul]
