--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaBayMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaBayMoroz.cfg
@@ -85,6 +85,16 @@ PART
 		nodeInnerAftID = rearInner
 	}
 
+	//Strictly this shouldn't be passable, but the crew tube mounts to the bay, so this needs to be passable for the crew tube
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
+
+
 	MODULE
 	{
 		name = ModulePartVariants
