--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaButtMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaButtMoroz.cfg
@@ -54,6 +54,14 @@ PART
 
 	tags = X20 x-20 dynasoar equipment compartment fuel cell service aircraft dynamic soarer
 	
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
+	
 	MODULE
 	{
 		name = ModuleFuelTanks
