--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiB/GeminiBRetrogradeSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiB/GeminiBRetrogradeSection.cfg
@@ -98,4 +98,10 @@ PART
 		ejectionForce = 10
 		staged = True
 	}
+	
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
 }
