--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeDecoupler.cfg
@@ -64,4 +64,10 @@ PART
 		toggleEditor = true
 		toggleFlight = true
 	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
 }
