--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
@@ -68,7 +68,8 @@ PART
 	//	Modules and Resources
 	//	============================================================================
 
-	MODULE
+	//Kerbalism will control the animation itself if present (assuming someone fixed the config)
+	MODULE:NEEDS[!Kerbalism]
 	{
 		name = ModuleAnimateGeneric
 		animationName = Deploy
