--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -125,8 +125,7 @@ PART
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
 		name = ModuleConnectedLivingSpace
-		passable = true
-		impassablenodes = bottom
+		passable = false
 	}
 
 	MODULE:NEEDS[RasterPropMonitor]
