--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2DockDrogue.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2DockDrogue.cfg
@@ -81,4 +81,10 @@ PART
 		minDistanceToReEngage = 0.25 // 1.0
 		undockEjectionForce = 0.1
 	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
 }
