--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+(Dprct).cfg
@@ -239,7 +239,9 @@ PART
 	{
 		name = ModuleConnectedLivingSpace
 		passable = true
-		impassablenodes = para, para2, bottom
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+		impassablenodes = para, para2
 	}
 
 	MODULE
