--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHS.cfg
@@ -66,4 +66,10 @@ PART
 			transform = MOL_Hatch
 		}
 	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
 }
