--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHSLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHSLunar.cfg
@@ -9,4 +9,10 @@
 	{
 		cube = Default, 0.3957,0.2817,1.238, 0.3957,0.2817,1.238, 4.055,0.9965,0.1367, 4.055,0.9519,0.3572, 0.3938,0.278,1.238, 0.3938,0.2873,1.238, 0,-0.01044,-2.384E-07, 2.8,0.2647,2.8
 	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
 }
