--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent(Dprct).cfg
@@ -227,7 +227,9 @@ PART
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
 		name = ModuleConnectedLivingSpace
-		passable = true
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
 		impassablenodes = bottom
 	}
 
