--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -400,6 +400,13 @@ PART
 		}
 	}
 
+	//Actually had emergency escape hatch in nose. Leave nose node passable.
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+	}
+
 	MODULE
 	{
 		name = ModuleFuelTanks
