Add ejection seat config for Gemini

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -134,6 +134,29 @@ PART
 		packetFloor = .1
 		packetCeiling = 5
 	}
+	
+	MODULE
+	{
+		name = ModuleROEjectionSeat
+		maxEjectSpeed = 900
+		maxEjectAltitude = 30000
+
+		SEAT    // left
+		{
+			colliderOffset = -0.8, 0.35, -1.35
+			colliderRotAngles = -62.0, 0.0, 18.0
+			forceDir = -0.35, 0.4, -1.0
+			ejectDelay = 0
+		}
+
+		SEAT    // right
+		{
+			colliderOffset = 0.8, 0.35, -1.35
+			colliderRotAngles = -62.0, 0.0, -18.0
+			forceDir = 0.35, 0.4, -1.0
+			ejectDelay = 0
+		}
+	}
 
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
