Actually hide Ascent Module
Rename DECQ ascent module after RealismOverhaulEngines pass so it sticks.

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent(Dprct).cfg
@@ -402,7 +402,7 @@ PART
 
 @PART[ROC-LEMAscent]:AFTER[RealismOverhaulEngines]
 {
-	@title = Apollo LM Ascent Stage
+	@title = Deprecated
 	@manufacturer = Grumman Aerospace Corporation
 	@description = The ascent stage and crew compartment of the Apollo Lunar Module. This has the ascent engine integrated.
 }
