Update to use new RODeprecated logic in RealismOverhaul

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism(Dprct).cfg
@@ -29,12 +29,14 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 
+	RODeprecated = True
+
 	TechRequired = dockingCrewTransfer
 	entryCost = 1000
 	cost = 2000
 	category = Coupling
 	subcategory = 0
-	title = Deprecated
+	title = Apollo Docking Mechanism Probe
 	manufacturer = North American Aviation
 	description = Do not use this part.
 	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
