--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler(Dprct).cfg
@@ -34,14 +34,16 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 
+	RODeprecated = True
+
 	TechRequired = dockingCrewTransfer
 	entryCost = 2800
 	cost = 200
 	category = Coupling
 	subcategory = 0
-	title = Deprecated
+	title = Apollo Command/Service Module Decoupler
 	manufacturer = North American Aviation
-	description = Do not use this part
+	description = This is used to decouple the Command Module from the Service Module prior to reentry. This one has been seperated from the Service Module, to allow you to attatch whatever you want to your Apollo capsule
 	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 
 	bulkheadProfiles = size2
