--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII(Dprct).cfg
@@ -41,10 +41,12 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 
+	RODeprecated = True
+	
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
-	title = Deprecated
+	title = Apollo Block III Service Engine (LMAE)
 	manufacturer = Bell / Rocketdyne
 	description = With the decreased weight and LEO operation design, there was no longer a need for a large engine to power the CSM. NASA decided to reuse the successful Lunar Module Ascent Engine. FICTIONAL (Eyes Turned Skyward)
 	tags = apollo, block-III, block-3, lmae, eyes turned skyward
@@ -103,9 +105,9 @@ PART
 @PART[ROC-ApolloEngineBlockIII]:AFTER[RealismOverhaulEngines]
 {
 	@mass = 0.0979 // We'll say it needs to be 20% larger with structure than on the LEM
-	@title = Deprecated
+	@title = Apollo Block III Service Engine (LMAE)
 	%manufacturer = Bell / Rocketdyne
-	@description = Do not use this part
+	@description = With the decreased weight and LEO operation design, there was no longer a need for a large engine to power the CSM. NASA decided to reuse the successful Lunar Module Ascent Engine. FICTIONAL (Eyes Turned Skyward)
 
 	MODULE
 	{
