--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+(Dprct).cfg
@@ -16,12 +16,14 @@ PART
 	node_stack_bottom = 0.0, -0.53, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_top = 0.0, -0.53, 0.0, 0.0, 1.0, 0.0, 1
 
+	RODeprecated = True
+
 	TechRequired = start
 	entryCost = 1
 	cost = 1
 	category = Thermal
 	subcategory = 0
-	title = Deprecated
+	title = Apollo Block III+ Heatshield
 	manufacturer = Rockwell International
 	description = LEO Heatshield for the Apollo Block III+ Capsule. A lighter heat shield for use with LEO operations.
 
