--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM(Dprct).cfg
@@ -42,8 +42,10 @@ PART
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Deprecated
+
+	RODeprecated = True
+
+	title = Apollo Command Module (CM)
 	manufacturer = North American Aviation
 	description = The Command Module of the Apollo spacecraft. Apollo was the spacecraft that transported humans to the Moon in the 1960's and 1970's. It has room for three crew. [Diameter: 3.91 m]
 	
