--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueDockPort(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueDockPort(Dprct).cfg
@@ -30,8 +30,10 @@ PART
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Deprecated
+
+	RODeprecated = True
+
+	title = Apollo Drogue Docking Port
 	manufacturer = North American Aviation
 	description = This is the drogue (accepting) part of the Apollo Docking System. It will only work with the Apollo Command Module Probe.
 	
