--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueParachute(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueParachute(Dprct).cfg
@@ -30,8 +30,10 @@ PART
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Deprecated
+
+	RODeprecated = True
+
+	title = Apollo Drogue Parachute Pack
 	manufacturer = Northrop Corp.
 	description = The drogue parachute pack is meant to slow down the Apollo spacecraft at a high altitude in preparation for the deployment of the main parachute pack. Attach this to the front node before placing the Forward Heat Shield.
 	
