--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloHGA(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloHGA(Dprct).cfg
@@ -29,8 +29,10 @@ PART
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Deprecated
+
+	RODeprecated = True
+
+	title = Apollo High Gain Antenna (HGA)
 	manufacturer = Dalmo Victor Co.
 	description = The primary High Gain Antenna of the Apollo Spacecraft. Attach to the bottom of the Service Module in the grooved node.
 	
