--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloHS(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloHS(Dprct).cfg
@@ -16,12 +16,14 @@ PART
 	node_stack_bottom = 0.0, -0.53, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_top = 0.0, -0.53, 0.0, 0.0, 1.0, 0.0, 1
 
+	RODeprecated = True
+
 	TechRequired = start
 	entryCost = 1
 	cost = 1
 	category = Thermal
 	subcategory = 0
-	title = Deprecated
+	title = Apollo Heatshield
 	manufacturer = North American Aviation
 	description = Heatshield for the Apollo Capsule.
 	attachRules = 1,0,1,0,0
