--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloLESCover(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloLESCover(Dprct).cfg
@@ -30,8 +30,10 @@ PART
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Deprecated
+
+	RODeprecated = True
+
+	title = Apollo LES Booster Protection Cover (BPC)
 	manufacturer = Lockheed
 	description = The booster protection cover protects the Apollo Command Module from the exhaust of the LES abort motor. Also doubles as a thermal protection system during the early phases of a launch.
 	
