--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloParachute(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloParachute(Dprct).cfg
@@ -29,8 +29,10 @@ PART
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Deprecated
+
+	RODeprecated = True
+
+	title = Apollo Main Parachute Pack
 	manufacturer = Northrop Corp.
 	description = The main parachute pack of the Apollo Command Module. Attach this to the central top node before placing the Forward Heat Shield.
 	
