--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloSM(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloSM(Dprct).cfg
@@ -34,8 +34,10 @@ PART
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Deprecated
+
+	RODeprecated = True
+
+	title = Apollo Service Module (SM)
 	manufacturer = North American Aviation
 	description = The Apollo Service Module contains the main propellant tanks, the fuel cells, life support and everything else that it is needed for a flight to the Moon. Connect this directly to the Command Module.
 	
