--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent(Dprct).cfg
@@ -40,12 +40,14 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 
+	RODeprecated = True
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
 	category = Pods
 	subcategory = 0
-	title = Deprecated
+	title = Apollo LM Ascent Stage
 	manufacturer = Grumman Aerospace Corporation
 	description = The ascent stage and crew compartment of the Apollo Lunar Module. This has the ascent engine integrated.
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, ascent
@@ -402,7 +404,7 @@ PART
 
 @PART[ROC-LEMAscent]:AFTER[RealismOverhaulEngines]
 {
-	@title = Deprecated
+	@title = Apollo LM Ascent Stage
 	@manufacturer = Grumman Aerospace Corporation
 	@description = The ascent stage and crew compartment of the Apollo Lunar Module. This has the ascent engine integrated.
 }
