--- a/GameData/ROCapsules/PartConfigs/LEM/LEMDecoupler(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMDecoupler(Dprct).cfg
@@ -28,12 +28,14 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 
+	RODeprecated = True
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
 	category = Coupling
 	subcategory = 0
-	title = Deprecated
+	title = Apollo LM Decoupler
 	manufacturer = Grumman Aerospace Corporation
 	description = The explosive bolt interstage connector placed between the ascent and the descent modules of the Apollo Lunar Module.
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, ascent, decoupler
