--- a/GameData/ROCapsules/PartConfigs/LEM/LEMDescent(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMDescent(Dprct).cfg
@@ -30,12 +30,14 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 
+	RODeprecated = True
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
 	category = FuelTank
 	subcategory = 0
-	title = Deprecated
+	title = Apollo LM Descent Stage
 	manufacturer = Grumman Aerospace Corporation
 	description = The Apollo Lunar Module descent stage. Equipped with storage boxes for storing equipment. It also includes a node to attach the Lunar Roving Vehicle.
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, descent, landing, land, legs
