--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+(Dprct).cfg
@@ -45,8 +45,10 @@ PART
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Deprecated
+
+	RODeprecated = True
+
+	title = Apollo Block III+ Command Module (CM)
 	manufacturer = Rockwell International
 	description = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO, and the internal volume was modified to fit 5 crew for reentry. Be sure to bring extra living space by attaching the Mission Module to dock with after orbiting. By only using the Command Module, you will have resources for 5 crew for 72 hours. FICTIONAL (Eyes Turned Skyward)
 
