--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockV(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockV(Dprct).cfg
@@ -41,10 +41,12 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 
+	RODeprecated = True
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
-	title = Deprecated
+	title = Apollo Block V Service Engine (TR-201)
 	manufacturer = TRW
 	description = Deeply throttleable pressure-fed vacuum engine used for the descent module of the Apollo lunar lander. Uses storable propellants which are not subject to boil-off, but are far less efficient than hydrolox or even kerolox. The later variant (TR-201) was used on Delta as an upper stage engine (on Delta P series); this was a low-cost model with more restarts (4 instead of 2) and slightly higher thrust but lower efficiency and no throttling capability. In the alternate Eyes Turned Skyward universe it was used for the Apollo Block V Service Module. FICTIONAL (Eyes Turned Skyward)
 	tags = apollo, block-V, block-5, tr-201, eyes turned skyward
@@ -112,9 +114,9 @@ PART
 @PART[ROC-ApolloEngineBlockV]:AFTER[RealismOverhaulEngines]
 {
 	@mass = 0.179
-	@title = Deprecated
+	title = Apollo Block V Service Engine (TR-201)
 	%manufacturer = TRW
-	@description = Do not use this part
+	@description = Deeply throttleable pressure-fed vacuum engine used for the descent module of the Apollo lunar lander. Uses storable propellants which are not subject to boil-off, but are far less efficient than hydrolox or even kerolox. The later variant (TR-201) was used on Delta as an upper stage engine (on Delta P series); this was a low-cost model with more restarts (4 instead of 2) and slightly higher thrust but lower efficiency and no throttling capability. In the alternate Eyes Turned Skyward universe it was used for the Apollo Block V Service Module. FICTIONAL (Eyes Turned Skyward)
 
 	@MODULE[ModuleEngineConfigs]
 	{
