--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -239,6 +239,7 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	vesselType = Ship
+	stagingIcon = COMMAND_POD
 	CrewCapacity = 1
 	bulkheadProfiles = size0, size1
 
@@ -338,20 +339,6 @@ PART
 		reviewActionName = Review Stored Data
 		storeActionName = Store Experiments
 		storageRange = 2.0
-	}
-
-	MODULE
-	{
-		name = ModuleScienceExperiment
-		experimentID = crewReport
-		experimentActionName = Crew Report
-		resetActionName = Discard Crew Report
-		reviewActionName = Review Report
-		useStaging = False
-		useActionGroups = True
-		hideUIwhenUnavailable = True
-		rerunnable = True
-		xmitDataScalar = 1.0
 	}
 
 	MODULE
@@ -531,87 +518,6 @@ PART
 			// }
 		// }
 	// }
-	
-	MODULE
-	{
-		name = ModuleB9AssignUiGroups
-		MODULE
-		{
-			IDENTIFIER
-			{
-				name = ModuleRCSFX
-				thrusterTransformName = rcsTransform
-			}
-			uiGroupName = rcsRoll
-			uiGroupDisplayName = RCS Roll
-		}
-		MODULE
-		{
-			IDENTIFIER
-			{
-				name = ModuleCommand
-			}
-			uiGroupName = command
-			uiGroupDisplayName = Command
-		}
-		MODULE
-		{
-			IDENTIFIER
-			{
-				name = ModuleReactionWheel
-			}
-			uiGroupName = internal
-			uiGroupDisplayName = Internal
-		}
-		MODULE
-		{
-			IDENTIFIER
-			{
-				name = ModuleDataTransmitter
-				antennaType = INTERNAL
-			}
-			uiGroupName = internal
-			uiGroupDisplayName = Internal
-		}
-		MODULE
-		{
-			IDENTIFIER
-			{
-				name = ModuleScienceExperiment
-				experimentID = crewReport
-			}
-			uiGroupName = command
-			uiGroupDisplayName = Command
-		}
-		MODULE
-		{
-			IDENTIFIER
-			{
-				name = ModuleScienceContainer
-			}
-			uiGroupName = command
-			uiGroupDisplayName = Command
-		}
-		MODULE
-		{
-			IDENTIFIER
-			{
-				name = ModuleAnimateGeneric
-				animationName = deploy_periscope
-			}
-			uiGroupName = command
-			uiGroupDisplayName = Command
-		}
-		MODULE
-		{
-			IDENTIFIER
-			{
-				name = ModuleColorChanger
-			}
-			uiGroupName = command
-			uiGroupDisplayName = Command
-		}
-	}
 }
 
 //	================================================================================
