Convert Apollo Fuels
Update Apollo fuels to compensate for new fuel densities, and switch to using MON1 instead of NTO.

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIII+.cfg
@@ -75,29 +75,31 @@ PART
 	}
 
 	// As stated in the canon, there is only room for 1600 kG of fuel. That doesn't coincide with the amounts we are using in the Block II, so we took the ratio of Block III to Block II.
+	// Give same ACS load, but decrease SPS load to 7%?
+	// FIXME implement proposed R-4D modification to use same propellant as SPS for extra redundancy
 	MODULE
 	{
 		name = ModuleFuelTanks
 		type = SM-IV
 		volume = 3000.0
 		basemass = 1.0377
-		TANK
+		TANK	//1108.2 lbs SPS
 		{
 			name = Aerozine50
-			amount = 710.4072
-			maxAmount = 710.4072
+			amount = 558.52
+			maxAmount = 558.52
 		}
-		TANK
+		TANK	//1,773.1 lbs SPS, 883.6 ACS
 		{
-			name = NTO
-			amount = 789.4163
-			maxAmount = 789.4163
+			name = MON1
+			amount = 840.29
+			maxAmount = 840.29
 		}
-		TANK
+		TANK	//432.4 lbs ACS
 		{
 			name = MMH
-			amount = 100
-			maxAmount = 100
+			amount = 222.88
+			maxAmount = 222.88
 		}
 		TANK
 		{
