--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIV.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIV.cfg
@@ -75,29 +75,31 @@ PART
 	}
 
 	// As stated in the canon, there is only room for 2000 kg of fuel. That doesn't coincide with the amounts we are using in the Block II, so we took the ratio of Block III to Block II.
+	// Give same ACS load, but decrease SPS load to 10%?
+	// FIXME implement proposed R-4D modification to use same propellant as SPS for extra redundancy
 	MODULE
 	{
 		name = ModuleFuelTanks
 		type = SM-IV
 		volume = 3500.0
 		basemass = 1.05
-		TANK
+		TANK	//1,583.1 lbs SPS
 		{
 			name = Aerozine50
-			amount = 888
-			maxAmount = 888
+			amount = 797.88
+			maxAmount = 797.88
 		}
-		TANK
+		TANK	//2,533.0 lbs SPS, 883.6 ACS
 		{
-			name = NTO
-			amount = 986.75
-			maxAmount = 986.75
+			name = MON1
+			amount = 1080.64
+			maxAmount = 1080.64
 		}
-		TANK
+		TANK	//432.4 lbs ACS
 		{
 			name = MMH
-			amount = 125
-			maxAmount = 125
+			amount = 222.88
+			maxAmount = 222.88
 		}
 		TANK
 		{
