--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
@@ -609,6 +609,7 @@ PART
 		}
 	}
 	
+	//Apollo CM used Rocketdyne SE-8 thrusters
 	MODULE
 	{
 		name = ModuleRCSFX
@@ -624,16 +625,16 @@ PART
 		enablePitch = true
 		enableYaw = true
 
-		PROPELLANT
+		PROPELLANT	//1.78 O/F based on fuel load?
 		{
 			name = MMH
-			ratio = 0.4810
+			ratio = 0.4780
 		}
 
 		PROPELLANT
 		{
-			name = NTO
-			ratio = 0.5190
+			name = MON1
+			ratio = 0.5220
 		}
 
 		PROPELLANT
@@ -680,16 +681,16 @@ PART
 		TANK
 		{
 			name = MMH
-			amount = 38.70
-			maxAmount = 38.70
+			amount = 38.71
+			maxAmount = 38.71
 		}
 
 		//133.5 lbs useable
 		TANK
 		{
-			name = NTO
-			amount = 41.76
-			maxAmount = 41.76
+			name = MON1
+			amount = 42.22
+			maxAmount = 42.22
 		}
 
 		//1 lbs
