--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloSMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloSMBDB.cfg
@@ -655,7 +655,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = SM-IV
-		volume = 22405
+		volume = 22535
 		basemass = 2.30360
 
 		//	One battery ~12 kWh (28 V @ 400 Ah, added post Apollo 13).
@@ -682,26 +682,26 @@ PART
 			isDewar = True
 		}
 
-		TANK
+		TANK	//15,831.3 lbs SPS
 		{
 			name = Aerozine50
-			amount = 7945.9
-			maxAmount = 7945.9
+			amount = 7978.83
+			maxAmount = 7978.83
 		}
 
-		TANK
+		TANK	//432.4 lbs ACS
 		{
 			name = MMH
-			amount = 222.9
-			maxAmount = 222.9
+			amount = 222.88
+			maxAmount = 222.88
 		}
 
 		TANK
 		{
-			// 7916.9 L SPS + 276.4L ACS
-			name = NTO
-			amount = 8193.3
-			maxAmount = 8193.3
+			// 25,330.1 lbs SPS, 883.6 lbs ACS
+			name = MON1
+			amount = 8291.14
+			maxAmount = 8291.14
 		}
 		
 		// Pressurant
