--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
@@ -435,13 +435,13 @@ PART
 		PROPELLANT
 		{
 			name = Aerozine50
-			ratio = 0.4401
+			ratio = 0.4373
 		}
 
 		PROPELLANT
 		{
-			name = NTO
-			ratio = 0.5599
+			name = MON1
+			ratio = 0.5627
 		}
 
 		PROPELLANT
@@ -517,7 +517,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = SM-IV
-		volume = 2662.935
+		volume = 2732.935
 		basemass = 1.53975
 
 		//	Two batteries ~16.6 kWh (28 V @ 296 Ah each).
@@ -529,19 +529,20 @@ PART
 			maxAmount = 59675
 		}
 
+		//Propellant: 5746.2 lbs
 		TANK
 		{
-			// 84.4L RCS + 985.8L main
+			// 167.0 lbs RCS + 2,014.1 lbs main
 			name = Aerozine50
-			amount = 1070.2
-			maxAmount = 1070.2
+			amount = 1099.26
+			maxAmount = 1099.26
 		}
 		TANK
 		{
-			// 107.4L RCS + 979.2L main
-			name = NTO
-			amount = 1086.6
-			maxAmount = 1086.6
+			// 342.5 lbs RCS + 3,222.6 lbs main
+			name = MON1
+			amount = 1127.61
+			maxAmount = 1127.61
 		}
 		TANK
 		{
