--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMDescentBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMDescentBDB.cfg
@@ -479,7 +479,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = SM-IV
-		volume = 9421.78
+		volume = 9482.98
 		basemass = 0.69111
 
 		//	Batteries ~56 kWh (28V @ 400 Ah).
@@ -495,21 +495,23 @@ PART
 		}
 
 		//	Capacity for ~222 kg of extra fuel for the J missions.
-
+		//	Propellant: 19613.7 lbs
 		TANK
 		{
+			//7,543.7 lbs main
 			name = Aerozine50
-			amount = 3791.5
-			maxAmount = 3791.5
+			amount = 3801.96
+			maxAmount = 3801.96
 		}
 
 		//	Capacity for ~355 kg of extra oxidizer for the J missions.
 
 		TANK
 		{
-			name = NTO
-			amount = 3765.8
-			maxAmount = 3765.8
+			//12,070.0 lbs main
+			name = MON1
+			amount = 3817.62
+			maxAmount = 3817.62
 		}
 		
 		TANK
