--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
@@ -78,13 +78,13 @@ PART
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.4464
+			ratio = 0.4441
 		}
 
 		PROPELLANT
 		{
-			name = NTO
-			ratio = 0.5536
+			name = MON1
+			ratio = 0.5559
 		}
 
 		PROPELLANT
