Change D-2 to use MON1 like IRL Apollo

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -180,20 +180,20 @@ PART
 		enableRoll = true
 		enablePitch = true
 		enableYaw = true
-		PROPELLANT
+		PROPELLANT	//1.78 O/F based on fuel load?
 		{
 			name = MMH
-			ratio = 0.456
+			ratio = 0.4780
 		}
 		PROPELLANT
 		{
-			name = NTO
-			ratio = 0.544
+			name = MON1
+			ratio = 0.5220
 		}
 		PROPELLANT
 		{
 			name = Helium
-			ratio = 10.0
+			ratio = 15.0
 			ignoreForIsp = true
 		}
 		atmosphereCurve
@@ -218,14 +218,14 @@ PART
 		TANK
 		{
 			name = MMH
-			amount = 46
-			maxAmount = 46
+			amount = 47.8
+			maxAmount = 47.8
 		}
 		TANK
 		{
 			name = NTO
-			amount = 55
-			maxAmount = 55
+			amount = 52.2
+			maxAmount = 52.2
 		}
 		TANK
 		{
