--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
@@ -73,20 +73,20 @@ PART
 		TANK
 		{
 			name = MMH
-			amount = 234.5
-			maxAmount = 234.5
+			amount = 239
+			maxAmount = 239
 		}
 		TANK
 		{
-			name = NTO
-			amount = 280.5
-			maxAmount = 280.5
+			name = MON1
+			amount = 261
+			maxAmount = 261
 		}
 		TANK
 		{
 			name = Helium
-			amount = 5160
-			maxAmount = 5160
+			amount = 7500
+			maxAmount = 7500
 		}
 	}
 }
