--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt1.cfg
@@ -119,20 +119,20 @@ PART
 		enableRoll = false
 		enablePitch = true
 		enableYaw = true
-		PROPELLANT
+		PROPELLANT	//1.78 O/F based on fuel load?
 		{
 			name = MMH
-			ratio = 0.456
+			ratio = 0.4780
 		}
 		PROPELLANT
 		{
-			name = NTO
-			ratio = 0.544
+			name = MON1
+			ratio = 0.5220
 		}
 		PROPELLANT
 		{
 			name = Helium
-			ratio = 10.0
+			ratio = 15.0
 			ignoreForIsp = true
 		}
 		atmosphereCurve
