--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
@@ -70,20 +70,20 @@ PART
 		thrusterPower = 0.445
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running
-		PROPELLANT
+		PROPELLANT	//1.78 O/F based on fuel load?
 		{
 			name = MMH
-			ratio = 0.456
+			ratio = 0.4780
 		}
 		PROPELLANT
 		{
-			name = NTO
-			ratio = 0.544
+			name = MON1
+			ratio = 0.5220
 		}
 		PROPELLANT
 		{
 			name = Helium
-			ratio = 10.0
+			ratio = 15.0
 			ignoreForIsp = true
 		}
 		atmosphereCurve
