Fix CST, Orion, Vostok fuel volumes/ratios

--- a/GameData/ROCapsules/PartConfigs/Orion/OrionRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionRCS.cfg
@@ -72,26 +72,31 @@ PART
 		thrusterPower = 0.440
 		
 		PROPELLANT
-		{
-			name = MON3
-			ratio = 0.5010
-		}
-		PROPELLANT
-		{
-			name = MMH
-			ratio = 0.4990
-		}
-		
-		atmosphereCurve
-		{
-			key = 0 246
-			key = 1 190
-		}
-		atmosphereCurve
-		{
-		 key = 0 290
-		 key = 1 190
-		}
-		
+			{
+				name = MMH
+				ratio = 0.4985
+				DrawGauge = True
+			}
+
+			PROPELLANT
+			{
+				name = MON3
+				ratio = 0.5015
+				DrawGauge = False
+			}
+
+			PROPELLANT
+			{
+				name = Helium
+				ratio = 10.4
+				DrawGauge = False
+				ignoreForIsp = true
+			}
+
+			atmosphereCurve
+			{
+				key = 0 311
+				key = 1 155
+			}
 	}
 }
