Beep boop I'm Github Actions

--- a/GameData/ROCapsules/changelog.cfg
+++ b/GameData/ROCapsules/changelog.cfg
@@ -4,4 +4,15 @@ KERBALCHANGELOG
 	license = CC-BY-NC-SA 4.0
 	author = KSP-RO team
 	website = github.com/KSP-RO/ROCapsules
+	VERSION
+	{
+		version = 2.1.0.0
+		versionKSP = 1.12.3
+		CHANGE
+		{
+			change = What's Changed
+			subchange = Material-based temps
+			subchange = Fix Mercury capsule not showing in map view (caused by a KSPCF patch; RO Capsules will temporarily disable that patch pending a KSPCF update)
+		}
+	}
 }
