Enable Mercury retropack staging
Mercury retropack decoupler staging was disabled by default. Make it enabled by default instead.

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
@@ -152,7 +152,7 @@ PART
 		name = ModuleDecouple
 		ejectionForce = -15
 		explosiveNodeID = top
-		stagingEnabled = False
+		stagingEnabled = True
 	}
 
 	MODULE
