--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
@@ -33,9 +33,9 @@ PART
 	category = Control
 	subcategory = 0
 	title = Vostok/Voskhod Service Module
-	manufacturer = OKB-1
+	manufacturer = #roMfrOKB1
 	description = A service module with batteries a simple engine AK20/Tonka250 engine that has only 1 ignition. This is the same service module that you use for Vostok and Voskhod. Attach the Decoupler to the Descent Module first and attach this to the bottom of the Descent Module.
-	tags = vostok, gagarin, soviet, service, module, voskhod
+	tags = vostok, gagarin, soviet, service, module, voskhod, zenit
 
 	bulkheadProfiles = size2
 
@@ -43,7 +43,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 1.924
+	mass = 1.615 //2270 kg wet. 275 kg fuel, 20 kg nitrogen, 250 kg batteries?, 64 kg tanks, 25 kg decoupler, 21 kg antenna, 1615 kg dry?
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -93,6 +93,33 @@ PART
 				localRotation = -90, 0, 0
 			}
 		}
+		running2
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = RCSthruster
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.02 0.1
+				volume = 0.5 0.1
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCSthruster
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}
 	}
 
 	//	============================================================================
@@ -106,7 +133,7 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 0.30
+			rate = 0.20		//0.20 kW average
 		}
 	}
 
@@ -140,16 +167,17 @@ PART
 			minThrust = 15.83
 			maxThrust = 15.83
 			heatProduction = 100
+			ignitions = 1	//only 1 start provided
 			PROPELLANT
 			{
 				name = AK20
-				ratio = 0.636
+				ratio = 0.6360
 				DrawGauge = True
 			}
 			PROPELLANT
 			{
 				name = Tonka250
-				ratio = 0.364
+				ratio = 0.3640
 			}
 			atmosphereCurve
 			{
@@ -159,14 +187,41 @@ PART
 		}
 	}
 
+	//Vostok had two RCS systems. Deorbit orientation thrusters ran off main engine gas generator
+	//On-orbit attitude control was provided by cold-gas nitrogen thrusters
 	MODULE
 	{
 		name = ModuleRCSFX
 		stagingEnabled = True
 		thrusterTransformName = RCSthruster
-		thrusterPower = 0.05
+		thrusterPower = 0.25	//guess
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
+		PROPELLANT
+		{
+			name = AK20
+			ratio = 0.6360
+			DrawGauge = True
+		}
+		PROPELLANT
+		{
+			name = Tonka250
+			ratio = 0.3640
+		}
+		atmosphereCurve
+		{
+			key = 0 200
+			key = 1 100
+		}
+	}
+	MODULE
+	{
+		name = ModuleRCSFX
+		stagingEnabled = True
+		thrusterTransformName = RCSthruster
+		thrusterPower = 0.010	//16x5N. We only have 6, so we're gonna assume they're mostly doubled up
+		resourceFlowMode = STAGE_PRIORITY_FLOW
+		runningEffectName = running2
 		PROPELLANT
 		{
 			ratio = 1.0
@@ -182,10 +237,10 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 378.98
-		type = Fuselage
-		basemass = -1
-		TANK
+		volume = 500
+		type = SM-II
+		basemass = 1.615
+		TANK	//275 kg main engine fuel
 		{
 			name = AK20
 			amount = 135.222
@@ -200,10 +255,10 @@ PART
 		TANK
 		{
 			name = ElectricCharge
-			amount = 86400
+			amount = 86400		//24 kWh
 			maxAmount = 86400
 		}
-		TANK
+		TANK	//20 kg nitrogen
 		{
 			name = Nitrogen
 			amount = 15990
