--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokParachute.cfg
@@ -32,7 +32,7 @@ PART
 	category = Utility
 	subcategory = 0
 	title = Vostok/Voskhod Parachute
-	manufacturer = OKB-1
+	manufacturer = #roMfrOKB1
 	description = When Yuri Gagarin returned to Earth after the first maiden spaceflight, he ejected from the capsule and parachuted to the ground. It was not until later versions of the capsule was the Parachute added. Connect this to the open part of the capsule
 	tags = vostok, gagarin, soviet, para, parachute, voskhod
 
