Screw it, get Voskhod and Zenit too

--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
@@ -40,7 +40,7 @@ PART
 	category = Utility
 	subcategory = 0
 	title = Voskhod Airlock
-	manufacturer = OKB-1
+	manufacturer = #roMfrOKB1
 	description = The Voskhod Airlock will allow for your crew to perform an EVA from the Voskhod airlock. Attach this to the node on the side of the Voskhod capsule. Transfer your crew memeber inside and perform your EVA. Be sure to decouple this before re-entry.
 	tags = soviet, capsule, crew, voskhod, airlock, eva
 
@@ -51,7 +51,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 0.339
+	mass = 0.250
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
