--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
@@ -14,6 +14,12 @@ PART
 	{
 		model = ROCapsules/Assets/RN/voskhod_sc
 	}
+	MODEL
+	{
+		model = RealismOverhaul/emptyengine
+		position = 0.0, -1.12398, 0.0
+		rotation = 0.0, 0.0, 0.0
+	}
 
 	INTERNAL
 	{
@@ -42,7 +48,7 @@ PART
 	category = Pods
 	subcategory = 0
 	title = Voskhod Descent Module
-	manufacturer = OKB-1
+	manufacturer = #roMfrOKB1
 	description = The Voskhod SA Descent Module was a re-purposed version of the Vostok SA. It was retrofitted to allow for an Airlock attachment for EVA and even to fit 3 cosmonauts. However, with 3 cosmonauts, there was not enough room to wear pressure suits. The SA stands for Spuskaemiy Apparat (Descent System) and was designed as a ballistic reentry capsule. [Diameter 2.3 m]
 	tags = soviet, capsule, crew, descent, voskhod
 
@@ -55,7 +61,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 1.809 // + 450kg ablator + supplied = 2457kg
+	mass = 1.186	//2900 kg wet. 484 kg ablator, 670 kg batteries, crew 300 kg, 113 kg supplies, 40 kg tanks, 21 kg antenna, 70 kg chute, ??? kg landing motor. 
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -65,7 +71,7 @@ PART
 	breakingTorque = 250
 	fuelCrossFeed = True
 
-	heatShieldDiameter = 4.243 // really 2.3, but tweak to apply more ablator
+	heatShieldDiameter = 4.4 // really 2.3, but tweak to apply more ablator
 	heatShieldTag = Mercury
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = false
@@ -102,15 +108,54 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 632.28
-		type = ServiceModule
-		basemass = -1
+		volume = 450
+		type = SM-II
+		basemass = 1.186
 		TANK
 		{
 			name = ElectricCharge
-			amount = 1000
-			maxAmount = 1000
-		}	
+			amount = 232000
+			maxAmount = 232000
+		}
+	}
+
+	//The SRM is attached to the parachute cord, but that's harder to set up
+	//also makes staging harder
+	MODULE
+	{
+		name = ModuleEnginesRF
+		thrustVectorTransformName = newThrustTransform
+		EngineType = SolidBooster
+		throttleLocked = True
+		exhaustDamage = True
+		ignitionThreshold = 0.1
+		minThrust = 16.7
+		maxThrust = 16.7
+		heatProduction = 400
+		useEngineResponseTime = True
+		engineAccelerationSpeed = 2.0
+		allowShutdown = False
+		fxOffset = 0, 0, 0.35
+		staged = True
+		stagingEnabled = True
+		PROPELLANT
+		{
+			name = SolidFuel
+			ratio = 1.0
+			DrawGauge = True
+		}
+		atmosphereCurve
+		{
+			key = 0 250
+			key = 1 230
+		}
+	}
+
+	RESOURCE
+	{
+		name = SolidFuel
+		amount = 2.8
+		maxAmount = 2.8
 	}
 
 	MODULE
@@ -286,13 +331,4 @@ PART
 			DumpExcess = False
 		}
 	}
-}
-
-//	================================================================================
-//	Final Pass to Make Sure TAC does not add extra resources
-//	================================================================================
-
-@PART[ROC-VoskhodCapsule]:LAST[ROCapsules]
-{
-	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
 }
