--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroBooster.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroBooster.cfg
@@ -32,7 +32,7 @@ PART
 	category = Engine
 	subcategory = 0
 	title = Voskhod Retro Package
-	manufacturer = OKB-1
+	manufacturer = #roMfrOKB1
 	description = Voskhod backup retro unit. Attach above the Voskhod Capsule on top of the Voskhod Retro Decoupler.
 	tags = soviet, retro, booster, voskhod
 
