--- a/GameData/ROCapsules/PartConfigs/Vostok/ZenitCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/ZenitCapsule.cfg
@@ -35,7 +35,7 @@ PART
 	category = Pods
 	subcategory = 0
 	title = Zenit Descent Module (Improved Film Camera)
-	manufacturer = OKB-1
+	manufacturer = #roMfrOKB1
 	description = The Zenit Descent Module was developed in parallel with the Vostok Descent Module, for photoreconnaissance use. Placing the camera equipment in a pressurized capsule made development much easier, and the cameras and film could be recovered together, reducing cost. Historically used as a spy satellite, but for our peaceful RP-1 purposes, these represent the earliest weather satellite photos.
 	tags = vostok zenit soviet capsule descent science photo photographs film camera corona spy sats dmagic
 
@@ -47,7 +47,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 1.809 // + 450kg ablator. Roughly the same mass as Vostok
+	mass = 0.995 //2340 kg wet?. 484 kg ablator, 670 kg batteries, 21 kg antenna, 70 kg chute, 100 kg film?.
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -57,7 +57,7 @@ PART
 	breakingTorque = 250
 	fuelCrossFeed = True
 
-	heatShieldDiameter = 4.243 // really 2.3, but tweak to apply more ablator
+	heatShieldDiameter = 4.4 // really 2.3, but tweak to apply more ablator
 	heatShieldTag = Mercury
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = false
@@ -82,14 +82,14 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 189.59
-		type = ServiceModule
-		basemass = -1
+		volume = 450
+		type = SM-II
+		basemass = 0.995
 		TANK
 		{
 			name = ElectricCharge
-			amount = 100000
-			maxAmount = 100000
+			amount = 232000
+			maxAmount = 232000
 		}
 	}
 
