--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroDecoupler.cfg
@@ -36,7 +36,7 @@ PART
 	category = Coupling
 	subcategory = 0
 	title = Voskhod Retro Decoupler
-	manufacturer = OKB-1
+	manufacturer = #roMfrOKB1
 	description = Place this above the Descent Module to decoupler the additional retro booster.
 	tags = soviet, decoupler, decouple, voskhod
 
