--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokDecoupler.cfg
@@ -36,7 +36,7 @@ PART
 	category = Coupling
 	subcategory = 0
 	title = Vostok/Voskhod Decoupler
-	manufacturer = OKB-1
+	manufacturer = #roMfrOKB1
 	description = Place this between the Descent Module and the Service Module to decouple the Capsule for reentry.
 	tags = vostok, gagarin, soviet, decoupler, decouple, voskhod
 
