--- a/GameData/ROCapsules/PartConfigs/Vostok/Waterfall_Support_Vostok.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/Waterfall_Support_Vostok.cfg
@@ -57,5 +57,21 @@
                 loop = true
             }
         }
+        running2
+        {
+            AUDIO_MULTI_POOL
+            {
+                channel = Ship
+                transformName = RCSthruster
+                clip = sound_rocket_mini
+                volume = 0.0 0.0
+                volume = 0.02 0.1
+                volume = 0.5 0.1
+                volume = 1.0 0.1
+                pitch = 0.0 0.75
+                pitch = 1.0 1.5
+                loop = true
+            }
+        }
     }
 }
